initial commit_msg

--- a/main.html
+++ b/main.html
@@ -7,9 +7,30 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact us</a></li>
+		</ul>
+	</nav>
+	<section><h1>3 random videos</h1></section>
+
+    <section><video width="300" height="200" type="video/mp4" controls></video> 
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
+
+	<video width="300" height="200" type="video/mp4" controls></video> 
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></video>
+
+	
+	<video width="300" height="200" type="video/mp4" controls></video> 
+    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"></video>		
+
+	</section>	
+
+    
+
 
 </body>
 
